--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Formulär</title>
 </head>
 <body>
-    
+    <form action="contact.php" method="post">
+        <p>
+            <label for="un">Användarnamn:</label>
+            <input name="username" id="un" required/>
+        </p>
+        <p>
+            <label for="pw">Lösenord:</label>
+            <input name="password" id="pw" required/>
+        </p>
+
+        <p>
+            <input type="submit" value="Logga in"/>
+        </p>
+    </form>
 </body>
 </html>
